--- a/css/component/quote.css
+++ b/css/component/quote.css
@@ -12,6 +12,7 @@
     font-style: italic;
     line-height: 1.5;
     padding: 20px 0;
+    text-align: center;
 }
 
 .inspire__from {
