--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,9 @@ html,body {
 .border {
     border: 1px solid var(--green);
     border-radius: 3px;
+    display: inline-block;
     padding: 3px 5px;
+    margin-bottom: 3px;
 }
 
 .bg-grey {
